--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
 <section id="footer">
   <div class="main__footer">
     <div class="logo__footer">
-<a href="index.html"><h1>Footer</h1>
-  <!--<img src="img/logo.png" width="85" alt="logo">--></a>
-
-
+      <h1>Logo</h1>
       <div class="contact__footer">
         <h1>Contact Us</h1>
         <li>
